[Fixed] - display collapse via smartphone(iphone6)

--- a/src/app/public/sass/app.scss
+++ b/src/app/public/sass/app.scss
@@ -77,7 +77,7 @@ ul {
   padding-left: $sidebar-width + 85px + 21px;
   // padding-left: $sidebar-width + 40px;
   padding-bottom: 30px;
-  padding-right: $sidebar-width + 40px;
+  // padding-right: $sidebar-width + 40px;
 }
 
 // left_col
